@@ -1,10 +1,10 @@
 SECTIONS
 {
   .text 0x01014000 :
-  { 
+  {
 	foo = .;
-	. = (. + 0x80004);
-	*(.text)   
+	. = (. + 0x20004);
+	*(.text)
   }
 }
 
